fixes getting eated products
